<resources>
    <string name="app_name">ui code test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="lbl_location">Location</string>
    <string name="lbl_location_value">Current location</string>
    <string name="lbl_date">Date &amp; Time</string>
    <string name="lbl_date_value">Now</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_duration_value">1 hr</string>

    <string name="lbl_go">Go</string>

    <string name="lbl_menu_rent_car">Rent a car</string>
    <string name="lbl_menu_booking">Bookings</string>
    <string name="lbl_menu_refer">Refer a friend</string>
    <string name="lbl_menu_account">Account</string>
</resources>