<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/tv_location_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:text="@string/lbl_location"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_location"
            app:layout_constraintTop_toTopOf="@+id/iv_location" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_location_value"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_location_title"
            app:layout_constraintStart_toStartOf="@+id/tv_location_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_title" />

        <View
            android:id="@+id/divider_start"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_duration"
            app:layout_constraintStart_toEndOf="@+id/view_date"
            app:layout_constraintTop_toBottomOf="@+id/divider_top" />

        <View
            android:id="@+id/divider_top"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/view_duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_location" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_duration"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_top">

            <ImageView
                android:id="@+id/iv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_date" />

            <TextView
                android:id="@+id/tv_date_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/lbl_date"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_date"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_date_value"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/view_date"
            app:layout_constraintEnd_toStartOf="@+id/action_go"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view_date"
            app:layout_constraintTop_toTopOf="@+id/view_date">

            <ImageView
                android:id="@+id/iv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_time" />

            <TextView
                android:id="@+id/tv_duration_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/lbl_duration"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_duration"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_duration_value"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_duration"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/action_go"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/bg_action_go"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:text="@string/lbl_go"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view_duration"
            app:layout_constraintTop_toTopOf="@+id/divider_top" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

